<resources>
    <string name="app_name">WeatherApp</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="enter_valid_password">Password should at least 5 characters</string>
    <string name="welcome">Welcome!</string>
    <string name="splash_screen_message">This app will provide you with weather details according to users,please login with your credentials</string>
    <string name="log_in">Log In</string>
    <string name="enter_email_and_pass">Please enter your Email address and password below</string>
    <string name="email">Email</string>
    <string name="txt_check_your_connection">Please check your network and try again.</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_not_match">Password does not match</string>
    <string name="user_list">User List</string>
    <string name="oops_user_not_added">Ooops! Seems like users are not added yet.\nAdd User from + icon from top right corner</string>
    <string name="add_user">Add User</string>
    <string name="add_user_detail">Add User Detail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="enter_first_name">Enter First name</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="weather">Weather</string>
    <string name="logout">Logout</string>
    <string name="weather_detail">Weather Detail</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this user data?</string>
</resources>