<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".user.presentation.fragment.AddUserFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/black20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:cardBackgroundColor="@color/black30"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="back"
                    android:padding="6dp"
                    android:src="@drawable/ic_back" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/add_user"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_below="@id/cvHeader">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/add_user_detail"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/etFirstName"
            style="@style/Weather.EditTextAppearance.Outlined"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/first_name"
            android:paddingHorizontal="16dp"
            android:paddingVertical="7dp" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/Weather.EditTextAppearance.Outlined"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:paddingHorizontal="16dp"
            android:paddingVertical="7dp" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/Weather.EditTextAppearance.Outlined"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="7dp" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/Weather.EditTextAppearance.Outlined"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="7dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/cancel"
                style="@style/Weather.ButtonAppearance.PrimaryTextButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/black30"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/add_user"
                android:layout_marginStart="5dp"
                style="@style/Weather.ButtonAppearance.PrimaryTextButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>