<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/black30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="14dp"
        android:paddingVertical="18dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/delete"
            android:layout_marginTop="14dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal"
            android:text="@string/are_you_sure"
            android:textColor="@color/black40"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                style="@style/Weather.ButtonAppearance.PrimaryTextButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="#4D5055"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/delete"
                android:layout_marginStart="5dp"
                style="@style/Weather.ButtonAppearance.PrimaryTextButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>