<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".weather.presentation.fragment.WeatherFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/black20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:cardBackgroundColor="@color/black30"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="back"
                    android:padding="6dp"
                    android:src="@drawable/ic_back" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/weather"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvLogout"
                android:layout_width="90dp"
                android:layout_height="32dp"
                app:cardBackgroundColor="@color/cyan"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_below="@id/cvHeader">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal"
            android:text="@string/weather_detail"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvWeathers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textSize="14sp" />

        </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTintMode="@color/cyan"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>